<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <ImageView
      android:id="@+id/closeButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:src="@drawable/ic_close_black_24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <!--TODO Get the correct car image from designer. -->
  <ImageView
      android:id="@+id/carImage"
      android:layout_width="0dp"
      android:layout_height="150dp"
      android:layout_marginBottom="64dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:src="@drawable/ic_car"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:textColor="@color/blackColor"
      android:textSize="16sp"
      android:id="@+id/signInInfoText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/text_sign_in"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/carImage"
      />
  <Button
      android:id="@+id/signInButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/text_sign_in_help"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signInInfoText"
      style="@style/Widget.AppCompat.Button.Colored"
      />
  <TextView
      android:gravity="center_horizontal"

      android:background="?selectableItemBackground"
      android:clickable="true"
      android:textSize="16sp"
      android:textColor="@color/colorPrimary"
      android:id="@+id/signUpButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:padding="16dp"
      android:text="@string/text_sign_up"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signInButton"
      />
  <TextView
      android:gravity="center_horizontal"
      android:textSize="14sp"
      android:id="@+id/licenceText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:text="@string/text_licence_agreement"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signUpButton"
      />


</android.support.constraint.ConstraintLayout>