<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/profile_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_human_handsup"
                android:text="@string/bottom_sheet_profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/call_help_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_human_handsup"
                android:text="@string/bottom_sheet_call_help"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/check_fine_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_human_handsup"
                android:text="@string/bottom_sheet_check_fines"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/settings_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_human_handsup"
                android:text="@string/bottom_sheet_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v7.widget.CardView>